--- a/alpaka.tex
+++ b/alpaka.tex
@@ -1266,6 +1266,6 @@ nicht möglich ist.
         \draw [rounded corners, fill = HKS07!100] (5.5, 20.1) rectangle (8, 22.1)
               node [pos = 0.5, align = center] {\color{white}\textbf{Konzept}};
     \end{tikzpicture}
-    \caption{Struktureller Aufbau der Alpaka"=Bibliothek}
+    \caption{Struktureller Aufbau der Alpaka"=Bibliothek\cite[nach][40]{worpitz2015}}
     \label{alpaka:konzepte:zusammenfassung:struktur}
 \end{figure}
