--- a/alpaka.tex
+++ b/alpaka.tex
@@ -1186,6 +1186,10 @@ nicht möglich ist.
 
 \subsection{Zusammenfassung}
 
+Die Abbildung~\ref{alpaka:konzepte:zusammenfassung:struktur} zeigt den
+konzeptionellen Aufbau der Alpaka"=Bibliothek. Das nächste Kapitel wird zeigen,
+wie die einzelnen Bestandteile mit SYCL implementiert wurden.
+
 \begin{figure}
     \centering
     \begin{tikzpicture}
