--- a/implementierung.tex
+++ b/implementierung.tex
@@ -822,7 +822,7 @@ Insgesamt umfasst das Backend \num{6936} Zeilen C++"=Quelltext.
         \draw [rounded corners, fill = HKS44!70] (8.25, 18.75) rectangle (12.75, 19.85)
               node [pos = 0.5, align = center] {\color{white}\texttt{PltfSycl}};
         \draw [rounded corners, fill = HKS44!100] (8.25, 20.1) rectangle (12.75, 22.1)
-              node [pos = 0.5, align = center] {\color{white}\texttt{Implementierung}};
+              node [pos = 0.5, align = center] {\color{white}\textbf{Implementierung}};
     \end{tikzpicture}
     \caption{Struktureller Aufbau des SYCL"=Alpaka"=Backends}
     \label{implementierung:zusammenfassung:struktur}
