--- a/main.tex
+++ b/main.tex
@@ -102,7 +102,7 @@
 \input{sycl}
 \input{alpaka}
 \input{implementierung}
-\input{messung}
+\input{ergebnisse}
 \input{fazit}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
